<resources>
    <string name="app_name">ShadowsocksR</string>
    <string name="fresh_dns_cache">Fresh DNS Cache(need root)</string>
    <string name="add_server">Add New Server</string>
    <string name="manually_add_server">Manually Add Server</string>
    <string name="del_current_server">Delete Current Server</string>
    <string name="proxy_tip">Checked apps will use proxy access internet</string>
    <string name="configuration_label">Configuration Name</string>
    <string name="server_host_name">Server host name or ip</string>
    <string name="server_name">Server</string>
    <string name="remote_server_port">Remote server\'s port</string>
    <string name="remote_port">Remote Port</string>
    <string name="local_port_to_listen">Local port to listen</string>
    <string name="local_port">Local Port</string>
    <string name="crypt_method">Crypt method</string>
    <string name="not_set_yet">Not set yet</string>
    <string name="password">Password</string>
    <string name="whether_use_route">Whether use route</string>
    <string name="route">Route</string>
    <string name="global_proxy">Global Proxy</string>
    <string name="set_proxy_for_sel_apps">Set proxy for selected apps</string>
    <string name="per_app_proxy">Per App Proxy</string>
    <string name="udp_dns">Use UDP resolve domain</string>
    <string name="start_ssr_on_startup">Enable ShadowsocksR on startup</string>
    <string name="auto_connect">Auto Connect</string>
    <string name="direct_to_ssr_page">Open ShadowsocksR GitHub page</string>
    <string name="all">All</string>
    <string name="bypass_lan">Bypass Lan</string>
    <string name="bypass_lan_list">Bypass Lan &amp; List</string>
    <string name="server_configuration">Server Configuration</string>
    <string name="global_configure">Global Configuration</string>
    <string name="etc">Etc.</string>
    <string name="about">About</string>
    <string name="being_set">Being set</string>
    <string name="warning">Warning!</string>
    <string name="test_ver_tip">This is a test version!</string>
    <string name="connecting">Connecting&#8230;</string>
    <string name="disconnecting">Disconnecting&#8230;</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="connect_failed">Connect failed!</string>
    <string name="add_svr_from_pic">Add Server From QRCode</string>
    <string name="req_install_qrscan_app">Install Barcode Scanner?</string>
    <string name="req_install_qrscan_app_msg">We need Barcode Scanner to scan QRCode. Would you like to install it?</string>
    <string name="add_success">Add Success</string>
    <string name="add_canceled">Add Canceled</string>
    <string name="add_failed">Add Failed</string>
    <string name="wait_load_list">Please wait load list…</string>
    <string name="show_qr">Show current QRCode</string>
    <string name="ssr_feature_configuration">SSR Feature Configuration</string>
    <string name="protocol_type">Protocol Type</string>
    <string name="obfs_method">Obfs Method</string>
    <string name="enable_tcp_over_udp">Enable TCP over UDP</string>
    <string name="enable_udp_over_tcp">Enable UDP over TCP</string>
    <string name="ssr_server_feature_support_tip">Some feature need server support</string>
    <string name="unchecked_to_use_origin_tcp">Unchecked to use origin TCP</string>
    <string name="unchecked_to_use_origin_udp">Unchecked to use origin UDP</string>
    <string name="forwarding_ipv6_traffic_to_remote">Forwarding IPv6 traffic to remote</string>
    <string name="ipv6_route">IPv6 Route</string>
    <string name="obfs_param">Obfs Param</string>
    <string name="proxy_work_mode">Proxy Work Mode</string>
    <string name="proxy_work_mode_summary">Check to use VPN Mode,Uncheck to use NAT mode</string>
</resources>
