<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/server_configuration">
        <com.proxy.shadowsocksr.preference.SummaryEditTextPreference
            android:defaultValue="Sample"
            android:dialogTitle="@string/configuration_label"
            android:key="label"
            android:summary="Sample"
            android:title="@string/configuration_label"/>
        <com.proxy.shadowsocksr.preference.SummaryEditTextPreference
            android:defaultValue="1.2.3.4"
            android:dialogTitle="@string/server_host_name"
            android:key="server"
            android:summary="@string/server_host_name"
            android:title="@string/server_name"/>
        <com.proxy.shadowsocksr.preference.SummaryEditTextPreference
            android:defaultValue="2333"
            android:inputType="number"
            android:key="remote_port"
            android:summary="@string/remote_server_port"
            android:title="@string/remote_port"/>
        <com.proxy.shadowsocksr.preference.SummaryEditTextPreference
            android:defaultValue="23333"
            android:inputType="number"
            android:key="local_port"
            android:summary="@string/local_port_to_listen"
            android:title="@string/local_port"/>
        <com.proxy.shadowsocksr.preference.SummaryListPreference
            android:entries="@array/crypt_method_entry"
            android:entryValues="@array/crypt_method_value"
            android:key="crypt_method"
            android:summary="@string/crypt_method"
            android:title="@string/crypt_method"/>
        <com.proxy.shadowsocksr.preference.PasswordPreference
            android:inputType="textPassword"
            android:key="password"
            android:summary="@string/not_set_yet"
            android:title="@string/password"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="ssr_feature"
        android:title="@string/ssr_feature_configuration">
        <com.proxy.shadowsocksr.preference.SummaryListPreference
            android:entries="@array/tcp_protocol_entry"
            android:entryValues="@array/tcp_protocol_value"
            android:key="protocol_type"
            android:summary="@string/protocol_type"
            android:title="@string/protocol_type"/>
        <com.proxy.shadowsocksr.preference.SummaryListPreference
            android:entries="@array/obfs_method_entry"
            android:entryValues="@array/obfs_method_value"
            android:key="obfs_method"
            android:summary="@string/obfs_method"
            android:title="@string/obfs_method"/>
        <com.proxy.shadowsocksr.preference.SummaryEditTextPreference
            android:key="obfs_param"
            android:summary=""
            android:enabled="false"
            android:title="@string/obfs_param"/>
        <CheckBoxPreference
            android:key="tcp_over_udp"
            android:summary="@string/unchecked_to_use_origin_tcp"
            android:title="@string/enable_tcp_over_udp"/>
        <CheckBoxPreference
            android:key="udp_over_tcp"
            android:summary="@string/unchecked_to_use_origin_udp"
            android:title="@string/enable_udp_over_tcp"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/global_configure">
        <com.proxy.shadowsocksr.preference.SummaryListPreference
            android:entries="@array/route_entry"
            android:entryValues="@array/route_value"
            android:key="route"
            android:summary="@string/whether_use_route"
            android:title="@string/route"/>
        <CheckBoxPreference
            android:checked="false"
            android:dependency="proxy_work_mode"
            android:key="ipv6_route"
            android:summary="@string/forwarding_ipv6_traffic_to_remote"
            android:title="@string/ipv6_route"/>
        <CheckBoxPreference
            android:checked="true"
            android:key="udp_dns"
            android:summary="@string/udp_dns"
            android:title="@string/udp_dns"/>
        <CheckBoxPreference
            android:key="auto_connect"
            android:summary="@string/start_ssr_on_startup"
            android:title="@string/auto_connect"/>
        <CheckBoxPreference
            android:key="proxy_work_mode"
            android:summary="@string/vpn_mode_summary"
            android:title="@string/vpn_mode"/>
        <CheckBoxPreference
            android:disableDependentsState="true"
            android:key="global_proxy"
            android:summary="@string/global_proxy"
            android:title="@string/global_proxy"/>
        <Preference
            android:dependency="global_proxy"
            android:key="per_app_proxy"
            android:summary="@string/set_proxy_for_sel_apps"
            android:title="@string/per_app_proxy">
            <intent
                android:targetClass="com.proxy.shadowsocksr.ProxyAppsActivity"
                android:targetPackage="com.proxy.shadowsocksr"/>
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
